--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node dist/app.js",
     "dev": "ts-node-dev --respawn --transpile-only src/app.ts",
     "build": "tsc",
-"postinstall": "npm run build",
+    "postinstall": "npm run build",
     "test": "jest"
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3",
     "multer": "^1.4.5-lts.1",
+    "prom-client": "^15.1.3",
     "winston": "^3.17.0"
   },
   "devDependencies": {
