--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,17 +23,17 @@ jobs:
 
       - name: Install Dependencies
         run: npm ci
+
+      - name: Create env file
+        run: |
+          touch .env
+          echo "PORT=10000" >> .env
+          echo "SUPABASE_URL=${{ secrets.SUPABASE_URL }}" >> .env
+          echo "SUPABASE_SERVICE_ROLE_KEY=${{ secrets.SUPABASE_SERVICE_ROLE_KEY }}" >> .env
+          echo "NODE_ENV=production" >> .env
         
       - name: Build Application
         run: npm run build
-        env:
-          VITE_SUPABASE_URL: ${{ secrets.SUPABASE_URL }}
-          VITE_SUPABASE_ANON_KEY: ${{ secrets.SUPABASE_ANON_KEY }}
-
-      - name: Install doctl
-        uses: digitalocean/action-doctl@v2
-        with:
-          token: ${{ secrets.DIGITALOCEAN_ACCESS_TOKEN }}
 
       - name: Configure SSH
         run: |
@@ -48,19 +48,20 @@ jobs:
             -e "ssh -i ~/.ssh/deploy_key" \
             --exclude='.git*' \
             --exclude='node_modules' \
-            --exclude='.env' \
-            ./dist/ root@${{ secrets.DROPLET_IP }}:/var/www/video-processor/
+            dist/ package*.json .env \
+            root@${{ secrets.DROPLET_IP }}:/var/www/video-processor/
           
           ssh -i ~/.ssh/deploy_key root@${{ secrets.DROPLET_IP }} << 'EOF'
             cd /var/www/video-processor
             npm ci --production
-            pm2 reload ecosystem.config.js
+            pm2 reload ecosystem.config.js --update-env
             sudo systemctl reload nginx
 EOF
 
       - name: Verify Deployment
         run: |
-          curl --fail --retry 3 --retry-delay 5 https://${{ secrets.DOMAIN_NAME }}/health || exit 1
+          sleep 10
+          curl --fail --retry 3 --retry-delay 5 http://${{ secrets.DROPLET_IP }}:10000 || exit 1
 
       - name: Notify on Success
         if: success()
