--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -56,7 +56,7 @@ jobs:
             npm ci --production
             pm2 reload ecosystem.config.js --update-env
             sudo systemctl reload nginx
-EOF
+          EOF
 
       - name: Verify Deployment
         run: |
@@ -64,7 +64,7 @@ EOF
           curl --fail --retry 3 --retry-delay 5 http://${{ secrets.DROPLET_IP }}:10000 || exit 1
 
       - name: Notify on Success
-        if: success()
+        if: success() && github.event_name != 'pull_request'
         uses: slackapi/slack-github-action@v1.24.0
         with:
           channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
@@ -73,7 +73,7 @@ EOF
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
       - name: Notify on Failure
-        if: failure()
+        if: failure() && github.event_name != 'pull_request'
         uses: slackapi/slack-github-action@v1.24.0
         with:
           channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
