--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,6 @@ on:
   workflow_dispatch:
 
 env:
-  DROPLET_NAME: video-processor
   NODE_VERSION: 18
 
 jobs:
@@ -48,7 +47,8 @@ jobs:
             -e "ssh -i ~/.ssh/deploy_key" \
             --exclude='.git*' \
             --exclude='node_modules' \
-            dist/ package*.json .env \
+            --exclude='.env' \
+            dist/ package*.json ecosystem.config.js \
             root@${{ secrets.DROPLET_IP }}:/var/www/video-processor/
           
           ssh -i ~/.ssh/deploy_key root@${{ secrets.DROPLET_IP }} << 'EOF'
@@ -56,7 +56,7 @@ jobs:
             npm ci --production
             pm2 reload ecosystem.config.js --update-env
             sudo systemctl reload nginx
-          EOF
+EOF
 
       - name: Verify Deployment
         run: |
@@ -64,7 +64,7 @@ jobs:
           curl --fail --retry 3 --retry-delay 5 http://${{ secrets.DROPLET_IP }}:10000 || exit 1
 
       - name: Notify on Success
-        if: success() && github.event_name != 'pull_request'
+        if: success()
         uses: slackapi/slack-github-action@v1.24.0
         with:
           channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
@@ -73,7 +73,7 @@ jobs:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
 
       - name: Notify on Failure
-        if: failure() && github.event_name != 'pull_request'
+        if: failure()
         uses: slackapi/slack-github-action@v1.24.0
         with:
           channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
