--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,6 +1,5 @@
 name: Deploy to DigitalOcean
 
-# Deployment triggered at 2024-03-19
 on:
   push:
     branches: [ main ]
@@ -35,49 +34,25 @@ jobs:
       - name: Build Application
         run: npm run build
 
-      - name: Debug SSH Setup
+      - name: Setup SSH
         run: |
           mkdir -p ~/.ssh
-          echo "Setting up SSH directory..."
-          ls -la ~/.ssh || true
-          
-          echo "Writing deploy key..."
           echo "${{ secrets.DEPLOY_KEY }}" > ~/.ssh/deploy_key
           chmod 600 ~/.ssh/deploy_key
-          ls -la ~/.ssh/deploy_key
-          
-          echo "Writing known hosts..."
           echo "${{ secrets.KNOWN_HOSTS }}" > ~/.ssh/known_hosts
           chmod 600 ~/.ssh/known_hosts
-          ls -la ~/.ssh/known_hosts
-          
-          echo "Creating SSH config..."
-          echo "Host *" > ~/.ssh/config
-          echo "  IdentityFile ~/.ssh/deploy_key" >> ~/.ssh/config
-          echo "  StrictHostKeyChecking yes" >> ~/.ssh/config
-          echo "  UserKnownHostsFile ~/.ssh/known_hosts" >> ~/.ssh/config
-          chmod 600 ~/.ssh/config
-          
-          echo "Final SSH directory contents:"
-          ls -la ~/.ssh/
-
-      - name: Test SSH Connection
-        run: ssh -v -i ~/.ssh/deploy_key nodejs@${{ secrets.DROPLET_IP }} 'echo "SSH connection successful"'
 
       - name: Deploy to DigitalOcean
         run: |
-          # Create directory if it doesn't exist
-          ssh -i ~/.ssh/deploy_key nodejs@${{ secrets.DROPLET_IP }} 'mkdir -p /var/www/video-processor'
-          
           rsync -avz --delete \
-            -e "ssh -i ~/.ssh/deploy_key -o StrictHostKeyChecking=yes" \
+            -e "ssh -i ~/.ssh/deploy_key" \
             --exclude='.git*' \
             --exclude='node_modules' \
             --exclude='.env' \
             dist/ package*.json ecosystem.config.js \
-            nodejs@${{ secrets.DROPLET_IP }}:/var/www/video-processor/
+            nodejs@161.35.137.136:/var/www/video-processor/
 
-          ssh -i ~/.ssh/deploy_key nodejs@${{ secrets.DROPLET_IP }} << 'EOSSH'
+          ssh -i ~/.ssh/deploy_key nodejs@161.35.137.136 << 'EOSSH'
             cd /var/www/video-processor
             npm ci --production
             pm2 reload ecosystem.config.js --update-env || pm2 start ecosystem.config.js
@@ -87,7 +62,7 @@ jobs:
       - name: Verify Deployment
         run: |
           sleep 10
-          curl --fail --retry 3 --retry-delay 5 http://${{ secrets.DROPLET_IP }}:10000 || exit 1
+          curl --fail --retry 3 --retry-delay 5 http://161.35.137.136:10000 || exit 1
 
       - name: Notify on Success
         if: success()
