Updated to create ecosystem.config before rsync

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,6 +34,22 @@ jobs:
       - name: Build Application
         run: npm run build
 
+      - name: Create PM2 ecosystem file
+        run: |
+          echo 'module.exports = {
+            apps: [{
+              name: "video-processor",
+              script: "dist/app.js",
+              instances: 1,
+              autorestart: true,
+              watch: false,
+              max_memory_restart: "1G",
+              env: {
+                NODE_ENV: "production"
+              }
+            }]
+          }' > ecosystem.config.js
+
       - name: Debug SSH Setup
         run: |
           mkdir -p ~/.ssh
