--- a/package.json
+++ b/package.json
@@ -12,19 +12,20 @@
   },
   "dependencies": {
     "@ffmpeg-installer/ffmpeg": "^1.1.0",
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.0",
+    "@types/fluent-ffmpeg": "^2.1.27",
+    "@types/multer": "^1.4.12",
+    "@types/node": "^22.10.5",
     "@types/react": "^18.2.55",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "fluent-ffmpeg": "^2.1.3",
     "multer": "^1.4.5-lts.1",
+    "prom-client": "^15.1.3",
     "typescript": "^5.7.3",
-    "winston": "^3.17.0",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.0",
-    "@types/fluent-ffmpeg": "^2.1.27",
-    "@types/multer": "^1.4.12",
-    "@types/node": "^22.10.5"
+    "winston": "^3.17.0"
   },
   "devDependencies": {
     "ts-node-dev": "^2.0.0"
