temp ddisable cache

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,8 +18,21 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: ${{ env.NODE_VERSION }}
-          cache: 'npm'
-          cache-dependency-path: './pm-video-processor-backend/package-lock.json'
+          # Temporarily disable caching to isolate the issue
+          cache: false
+
+      - name: Configure and verify npm cache
+        run: |
+          echo "Current directory structure:"
+          ls -la ~
+          echo "Creating npm cache directory..."
+          mkdir -p ~/.npm-cache
+          echo "Verifying npm cache directory:"
+          ls -la ~/.npm-cache
+          echo "Setting npm cache location..."
+          npm config set cache ~/.npm-cache
+          echo "Confirming npm cache config:"
+          npm config get cache
 
       - name: Install Dependencies
         working-directory: pm-video-processor-backend
